--- a/styles/Posts.module.css
+++ b/styles/Posts.module.css
@@ -21,7 +21,9 @@
   text-decoration: none;
 }
 
-.title a:hover, .title a:focus, .title a:active {
+.title a:hover,
+.title a:focus,
+.title a:active {
   text-decoration: underline;
 }
 
@@ -31,7 +33,8 @@
   font-size: 4rem;
 }
 
-.title, .description {
+.title,
+.description {
   text-align: center;
 }
 
@@ -51,26 +54,38 @@
 
 .holder {
   min-width: calc(20vw - 2rem);
+  display: flex;
+  justify-content: center;
 }
 
 .card {
   margin: 2rem 1rem;
-  padding: 2px;
+  width: 220px;
   text-align: center;
   color: inherit;
   text-decoration: none;
   border: 1px solid #eaeaea;
   border-radius: 5px;
   transition: color 0.15s ease, border-color 0.15s ease;
-  width: 220px;
 }
 
-.card:hover, .card:focus, .card:active {
+.card:hover {
   color: #0070f3;
   border-color: #0070f3;
 }
 
 .card .votes {
   text-align: right;
-  margin-right: .5rem;
+  margin-right: 0.5rem;
+}
+
+.description {
+  position: absolute;
+  left: 50vw;
+  transform: translateX(-50%);
+  width: 50vw;
+  padding: 1rem;
+  border-radius: 1rem;
+  background: rgba(255, 255, 255, 0.8);
+  z-index: 999;
 }
